# fast_bilateral_space_stereo

./: CMakeLists.txt  README.md
src/: bilateral_grid_simplified.cpp  bilateral_grid_simplified.h  fast_bilateral_solver.cpp  fast_bilateral_solver.h  main.cpp  stereo_matcher_birchfield_tomasi.cpp  stereo_matcher_birchfield_tomasi.h
